--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^6.1.8",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.0",
     "react-slick": "^0.30.2",
